navbar animation added

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.5.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
