--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "date-fns": "^3.6.0",
+    "dompurify": "^3.1.6",
+    "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.5.3",
     "input-otp": "^1.2.4",
@@ -30,10 +37,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-pagination-bar": "^2.0.1",
     "react-phone-number-input": "^3.4.5",
+    "react-slick": "^0.30.2",
+    "react-star-ratings": "^2.3.0",
     "sharp": "^0.33.5",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
+    "yet-another-react-lightbox": "^3.21.4"
   },
   "devDependencies": {
     "eslint": "^8",
