--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dompurify": "^3.1.6",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "fabric": "^6.4.1",
+    "fabricjs-react": "^2.0.0",
     "framer-motion": "^11.5.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
