--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
@@ -48,6 +49,8 @@
     "react-star-ratings": "^2.3.0",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.5.0",
+    "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
