--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
     "sharp": "^0.33.5",
+    "simple-color-converter": "^2.1.13",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.0",
