[add] authentication api integrated

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +37,8 @@
     "fabricjs-react": "^2.0.0",
     "framer-motion": "^11.5.3",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
@@ -45,8 +48,10 @@
     "react-hook-form": "^7.53.0",
     "react-pagination-bar": "^2.0.1",
     "react-phone-number-input": "^3.4.5",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
+    "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "simple-color-converter": "^2.1.13",
     "slick-carousel": "^1.8.1",
