--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
