--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-lottie": "^1.2.4",
     "react-pagination-bar": "^2.0.1",
     "react-phone-number-input": "^3.4.5",
     "react-redux": "^9.1.2",
