--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_BACKEND_BASEURL=http://192.168.10.188:8004/api/v1
+NEXT_PUBLIC_BACKEND_BASEURL=http://172.16.0.2:8004/api/v1
+# NEXT_PUBLIC_BACKEND_BASEURL=http://192.168.10.188:8004/api/v1
 
 NEXT_PUBLIC_CSR_DASHBOARD_URL=https://www.google.com
 NEXT_PUBLIC_ADMIN_DASHBOARD_URL=https://www.google.com
