--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_BACKEND_BASEURL=http://172.16.0.2:8004/api/v1
+NEXT_PUBLIC_SOCKET_ENDPOINT=http://192.168.10.188:8005
+# NEXT_PUBLIC_SOCKET_ENDPOINT=http://172.16.0.2:8005
 # NEXT_PUBLIC_BACKEND_BASEURL=http://192.168.10.188:8004/api/v1
 
 NEXT_PUBLIC_CSR_DASHBOARD_URL=https://www.google.com
