--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@samvera/image-downloader": "^1.1.6",
     "antd": "^5.20.5",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -34,11 +36,14 @@
     "dompurify": "^3.1.6",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "emoji-picker-react": "^4.12.0",
     "fabric": "^6.4.1",
     "fabricjs-react": "^2.0.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.5.3",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "js-file-download": "^0.4.12",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
@@ -52,12 +57,14 @@
     "react-pagination-bar": "^2.0.1",
     "react-phone-number-input": "^3.4.5",
     "react-redux": "^9.1.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.5",
     "simple-color-converter": "^2.1.13",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.0",
     "sonner": "^1.5.0",
     "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
