--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "color-change": "^1.1.3",
     "date-fns": "^3.6.0",
     "dompurify": "^3.1.6",
     "embla-carousel-autoplay": "^8.2.1",
