--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.5",
     "axios": "^1.7.7",
@@ -49,6 +50,7 @@
     "next": "14.2.7",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.6.15",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
