--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^3.6.15",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
