--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,16 @@
 {
-  "extends": "next",
+  "extends": ["eslint:recommended", "next"],
   "rules": {
     "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
+    "@next/next/no-page-custom-font": "off",
+
+    "no-var": "error",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ],
+    "no-undef": "error"
   }
 }
